apps/services/media/mango/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mango-server
  labels:
    app: mango-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mango-server
  template:
    metadata:
      labels:
        app: mango-server
    spec:
      containers:
        - name: mango
          image: hkalexling/mango:v0.27.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 9000
              protocol: TCP
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: config
              mountPath: /root/.config/mango
            - name: library
              mountPath: /root/mango
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: manga-library
        - name: config
          persistentVolumeClaim:
            claimName: mango-storage
