apps/services/media/mango/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mango-svc
  labels:
    app: mango-server
spec:
  type: ClusterIP
  selector:
    app: mango-server
  ports:
    - name: web
      port: 80
      targetPort: 9000
      protocol: TCP
